--- a/index.html
+++ b/index.html
@@ -532,10 +532,16 @@
 <meta property="og:type" content="website">
 
   <title>
-    Tecnifrio Berrones
+    Tecnifrio La Troncal
   </title>
-  <meta name="keywords" content="aire acondicionado en quito, refrigeracion, ventilacion, cuartos frios, instalacion de aire acondicionado, mantenimiento de aire acondicionado, reparacion de aire acondicionado, sistemas de refrigeracion, instalacion de aire acondicionado"/>
+  <meta name="keywords" content="aire acondicionado en la Troncal, refrigeracion, ventilacion, cuartos frios, instalacion de aire acondicionado, mantenimiento de aire acondicionado, reparacion de aire acondicionado, sistemas de refrigeracion, instalacion de aire acondicionado"/>
   <meta name="description" content="Somos una empresa especializada en la venta e instalación de aire acondicionado, cuartos fríos, sistemas de refrigeración y ventilación en todas las marcas."/>
+
+  <meta property="og:url"                content="https://istenasoftware.github.io/www.tecnifriolatroncal.com/" />
+  <meta property="og:type"               content="web site" />
+  <meta property="og:title"              content="Tecnifrio La Troncal" />
+  <meta property="og:description"        content="Somos una empresa especializada en la venta e instalación de aire acondicionado" />
+  <meta property="og:image"              content="https://istenasoftware.github.io/www.tecnifriolatroncal.com/IMG/1.png"/>
 
   <script id="navegg" type="text/javascript" src="http://tag.navdmp.com/tm21360.js">
 
@@ -635,7 +641,9 @@ nvg21360.makeCustomSegment = function (){var res = {};this.cokCache = {};var nvg
       
     >
 
-
+<div>
+    <h1>new div title</h1>
+</div>
 
 
 
