--- a/index.html
+++ b/index.html
@@ -2106,7 +2106,7 @@
                                                                         data-widget-type="image" id="1013049736"> <a
                                                                             id="1299399190"><img src="IMG/TFT (2).png"
                                                                                 alt="" id="1953590058" class=""
-                                                                                data-dm-image-path="https://irp.cdn-website.com/8af7d4d4/dms3rep/multi/Lofo+fila+1-bbf04bbf.png"
+                                                                                data-dm-image-path="IMG/TFT (2).png"
                                                                                 onerror="handleImageLoadError(this)" /></a>
                                                                     </div>
                                                                 </div>
