--- a/nosotros.html
+++ b/nosotros.html
@@ -257,7 +257,7 @@
 
 <!--Add favorites icons-->
 
-<link rel="apple-touch-icon" href="https://irp.cdn-website.com/8af7d4d4/dms3rep/multi/Logo+TE.png"/>
+<link rel="apple-touch-icon" href="IMG/(español) (4).png"/>
 
 <link rel="icon" type="image/x-icon" href="IMG/(español) (4).png"/>
 
